--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -7,24 +7,32 @@
     xmlns:vm="clr-namespace:Client_App.ViewModels"
     Title="Сравнение форм"
     Width="950"
-    Height="1000"
+    MinWidth="950"
+    MinHeight="600"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
 
     <Design.DataContext>
         <vm:CompareReportsTitleFormVM/>
     </Design.DataContext>
 
-    <Grid RowDefinitions="200,1200">
+    <Grid>
         <!--  TopTable  -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" MaxHeight="200"/>
+            <RowDefinition Height="2*" MinHeight="400"/>
+        </Grid.RowDefinitions>
         <Border
             Grid.Row="0"
-            Height="200"
+            MinHeight="200"
+            MaxHeight="200"
             Margin="5"
             HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
             BorderBrush="Black"
             BorderThickness="1"
             CornerRadius="5">
-            <Grid ColumnDefinitions="2*,4*" RowDefinitions="*,*,*">
+            <Grid ColumnDefinitions="350,300" RowDefinitions="*,*,*">
                 <TextBlock
                     Grid.Row="0"
                     Grid.Column="0"
@@ -63,7 +71,7 @@
                     Grid.Row="2"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
-                    Margin="5,30">
+                    Margin="20,30,0,20">
                     <Button
                         Width="80"
                         Height="30"
@@ -72,7 +80,7 @@
                     <Button
                         Width="80"
                         Height="30"
-                        Margin="0,0,315,0"
+                        Margin="0,0,304,0"
                         Content="Не заменять"/>
                     <Button
                         Width="80"
@@ -81,27 +89,38 @@
                 </WrapPanel>
             </Grid>
         </Border>
-        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Hidden">
-            <Grid RowDefinitions="595,595">
+        <ScrollViewer
+            Grid.Row="1"
+            MinHeight="400"
+            VerticalAlignment="Top"
+            VerticalContentAlignment="Stretch"
+            VerticalScrollBarVisibility="Hidden">
+            <StackPanel>
                 <!--  Юридическое лицо  -->
                 <Border
-                    Grid.Row="0"
-                    Height="595"
-                    Margin="5,0,5,5"
+                    Margin="5"
                     Padding="3"
                     HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
                     BorderBrush="Black"
                     BorderThickness="1"
                     CornerRadius="5">
-                    <Grid ColumnDefinitions="200,300,75,300">
+                    <Grid ColumnDefinitions="200,300,75,300" RowDefinitions="*,*">
                         <!--  Юридическое лицо - Наименования полей  -->
-                        <StackPanel Grid.Column="0">
-                            <TextBlock
-                                Height="32"
-                                Margin="5,0,0,0"
-                                FontSize="18"
-                                FontWeight="Bold"
-                                Text="Юридическое лицо"/>
+                        <TextBlock
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="4"
+                            Height="32"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Top"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Text="Юридическое лицо"/>
+                        <StackPanel
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Margin="0,24,0,0">
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
@@ -171,13 +190,14 @@
                                 Margin="5,0"
                                 Text="ОКФС"/>
                         </StackPanel>
-                        <!--  Юридическое лицо - Старые значения  -->
+                        <!--  Юридическое лицо - Значения в базе  -->
                         <StackPanel
+                            Grid.Row="1"
                             Grid.Column="1"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
                             <TextBlock
-                                Margin="0,26,0,3"
+                                Margin="0,0,0,3"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
                                 Text="Значения в базе"/>
@@ -251,11 +271,14 @@
                                 Text=""/>
                         </StackPanel>
                         <!--  Юридическое лицо - CheckBox  -->
-                        <StackPanel Grid.Column="2" HorizontalAlignment="Center">
+                        <StackPanel
+                            Grid.Row="1"
+                            Grid.Column="2"
+                            HorizontalAlignment="Center">
                             <TextBlock
                                 Width="50"
                                 Height="15"
-                                Margin="0,27,0,3"
+                                Margin="0,0,0,3"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
                                 Text="Заменить"/>
@@ -330,10 +353,14 @@
                         </StackPanel>
                         <!--  Юридическое лицо - Новые значения  -->
                         <StackPanel
+                            Grid.Row="1"
                             Grid.Column="3"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
-                            <TextBlock Text="Значение импортируемой формы" Margin="0,26,0,3"/>
+                            <TextBlock
+                                Margin="0,0,0,3"
+                                HorizontalAlignment="Center"
+                                Text="Значение импортируемой формы"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
@@ -407,23 +434,28 @@
                 </Border>
                 <!--  Территориальное обособленное подразделение  -->
                 <Border
-                    Grid.Row="1"
-                    Height="595"
                     Margin="5,0,5,5"
                     Padding="3"
                     HorizontalAlignment="Stretch"
                     BorderBrush="Black"
                     BorderThickness="1"
                     CornerRadius="5">
-                    <Grid ColumnDefinitions="200,300,75,300">
+                    <Grid ColumnDefinitions="200,300,75,300" RowDefinitions="*,*">
                         <!--  Территориальное обособленное подразделение - Наименования полей  -->
-                        <StackPanel Grid.Column="0">
-                            <TextBlock
-                                Height="32"
-                                Margin="5,0,0,0"
-                                FontSize="18"
-                                FontWeight="Bold"
-                                Text="Территориальное обособленное подразделение"/>
+                        <TextBlock
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="4"
+                            Height="32"
+                            Margin="5,0,0,0"
+                            VerticalAlignment="Top"
+                            FontSize="18"
+                            FontWeight="Bold"
+                            Text="Территориальное обособленное подразделение"/>
+                        <StackPanel
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Margin="0,24,0,0">
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
@@ -493,13 +525,14 @@
                                 Margin="5,0"
                                 Text="ОКФС"/>
                         </StackPanel>
-                        <!--  Территориальное обособленное подразделение - Старые значения  -->
+                        <!--  Территориальное обособленное подразделение - Значения в базе  -->
                         <StackPanel
+                            Grid.Row="1"
                             Grid.Column="1"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
                             <TextBlock
-                                Margin="0,26,0,3"
+                                Margin="0,0,0,3"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
                                 Text="Значения в базе"/>
@@ -573,11 +606,14 @@
                                 Text=""/>
                         </StackPanel>
                         <!--  Территориальное обособленное подразделение - CheckBox  -->
-                        <StackPanel Grid.Column="2" HorizontalAlignment="Center">
+                        <StackPanel
+                            Grid.Row="1"
+                            Grid.Column="2"
+                            HorizontalAlignment="Center">
                             <TextBlock
                                 Width="50"
                                 Height="15"
-                                Margin="0,27,0,3"
+                                Margin="0,0,0,3"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Bottom"
                                 Text="Заменить"/>
@@ -652,10 +688,14 @@
                         </StackPanel>
                         <!--  Территориальное обособленное подразделение - Новые значения  -->
                         <StackPanel
+                            Grid.Row="1"
                             Grid.Column="3"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
-                            <TextBlock Text="Значение импортируемой формы" Margin="0,26,0,3"/>
+                            <TextBlock
+                                Margin="0,0,0,3"
+                                HorizontalAlignment="Center"
+                                Text="Значение импортируемой формы"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
@@ -727,7 +767,7 @@
                         </StackPanel>
                     </Grid>
                 </Border>
-            </Grid>
+            </StackPanel>
         </ScrollViewer>
     </Grid>
 </Window>
