--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -3,12 +3,16 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+    xmlns:ir="clr-namespace:Avalonia.Xaml.Interactions.Responsive;assembly=Avalonia.Xaml.Interactions"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels"
     Title="Сравнение форм"
     Width="950"
     MinWidth="950"
     MinHeight="600"
+    x:CompileBindings="True"
+    x:DataType="vm:CompareReportsTitleFormVM"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
 
@@ -124,6 +128,7 @@
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
+                                IsEnabled="False"
                                 Text="Субъект Российской федерации"/>
                             <TextBlock
                                 Height="32"
@@ -204,7 +209,8 @@
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
-                                Text=""/>
+                                IsReadOnly="True"
+                                Text="{Binding OldSubjectRF, Mode=OneWay}"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,3"
@@ -276,80 +282,81 @@
                             Grid.Column="2"
                             HorizontalAlignment="Center">
                             <TextBlock
-                                Width="50"
-                                Height="15"
-                                Margin="0,0,0,3"
                                 HorizontalAlignment="Center"
-                                VerticalAlignment="Bottom"
+                                VerticalAlignment="Center"
                                 Text="Заменить"/>
-                            <CheckBox
-                                Margin="0,4,0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
-                            <CheckBox
-                                Margin="0,7"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
+                            <ListBox BorderThickness="0">
+                                <CheckBox
+                                    Margin="0,4,0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    IsChecked="{Binding ReplaceSubjectRF, Mode=OneWay}"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                                <CheckBox
+                                    Margin="0,7"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"/>
+                            </ListBox>
+
                         </StackPanel>
                         <!--  Юридическое лицо - Новые значения  -->
                         <StackPanel
@@ -364,7 +371,7 @@
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
-                                Text=""/>
+                                Text="{Binding NewSubjectRF, Mode=TwoWay}"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,3"
