--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -4,14 +4,22 @@
         xmlns:Controls="using:Client_App.Controls.DataGrid"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="800" Height="855"
-        MinHeight="200" MinWidth="200"
+        xmlns:tools="clr-namespace:Client_App.Tools"
+        xmlns:platform="clr-namespace:Avalonia.Platform;assembly=Avalonia.Controls"
+        mc:Ignorable="d"
+        Height="{Binding Source={x:Type platform:Screen}, Converter={tools:RatioConverter}, ConverterParameter='0.85' }"
+        MinHeight="200"
+        MinWidth="200"
         x:Class="Client_App.Views.MainWindow"
         Icon="/Assets/logo.png"
         Title="{Binding Current_Db}"
         x:Name="MainWindow"
         Background="#ffffff"
         WindowStartupLocation="CenterScreen">
+
+    <Design.DataContext>
+        <vm:MainWindowVM/>
+    </Design.DataContext>
 
     <DockPanel>
         <Menu Height="20" DockPanel.Dock="Top">
