--- a/Client_App/Views/CompareReportsTitleForm.axaml
+++ b/Client_App/Views/CompareReportsTitleForm.axaml
@@ -31,36 +31,38 @@
             Grid.Row="0"
             MinHeight="200"
             MaxHeight="200"
-            Margin="5"
+            Margin="5,5,5,0"
+            Padding="0,5,0,0"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
             BorderBrush="Black"
             BorderThickness="1"
             CornerRadius="5">
-            <Grid ColumnDefinitions="350,300" RowDefinitions="*,*,*">
+            <Grid ColumnDefinitions="350,300" RowDefinitions="*,*,*,*,*">
                 <TextBlock
                     Grid.Row="0"
                     Grid.Column="0"
-                    Margin="5,0,0,0"
+                    Margin="5,3,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Text="Орган управления использованием атомной энергии:"/>
+                    Text="Регистрационный номер:"/>
                 <TextBox
                     Grid.Row="0"
                     Grid.Column="1"
                     Width="300"
                     Height="30"
-                    Margin="0,0,5,0"
+                    Margin="0,3,5,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Text="{Binding OrganUprav}"/>
+                    IsReadOnly="True"
+                    Text="{Binding RegNo, Mode=OneTime}"/>
                 <TextBlock
                     Grid.Row="1"
                     Grid.Column="0"
                     Margin="5,0,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Text="Регистрационный номер:"/>
+                    Text="Сокращенное наименование:"/>
                 <TextBox
                     Grid.Row="1"
                     Grid.Column="1"
@@ -70,9 +72,26 @@
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
                     IsReadOnly="True"
-                    Text="{Binding RegNo, Mode=OneWay}"/>
-                <WrapPanel
+                    Text="{Binding ShortJurLico, Mode=OneTime}"/>
+                <TextBlock
                     Grid.Row="2"
+                    Grid.Column="0"
+                    Margin="5,0,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="ОКПО:"/>
+                <TextBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="300"
+                    Height="30"
+                    Margin="0,0,5,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    IsReadOnly="True"
+                    Text="{Binding Okpo, Mode=OneTime}"/>
+                <WrapPanel
+                    Grid.Row="3"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Margin="20,30,0,20">
@@ -87,7 +106,7 @@
                         Name="CloseWithoutReplace"
                         Width="80"
                         Height="30"
-                        Margin="0,0,304,0"
+                        Margin="0,0,313,0"
                         Click="CloseWithoutReplaceButtonClick"
                         Content="Не заменять"/>
                     <Button
@@ -97,12 +116,24 @@
                         Click="SelectAllButtonClick"
                         Content="Выбрать всё"/>
                 </WrapPanel>
+                <StackPanel
+                    Grid.Row="4"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    VerticalAlignment="Bottom"
+                    Orientation="Horizontal">
+                    <TextBlock Margin="320,0,0,0" Text="Значения в базе"/>
+                    <TextBlock Margin="117,0,0,0" Text="Заменить"/>
+                    <TextBlock Margin="85,0,0,0" Text="Импортируемые значения"/>
+                </StackPanel>
             </Grid>
+
         </Border>
         <!--  ScrollData  -->
         <ScrollViewer
             Grid.Row="1"
             MinHeight="400"
+            Margin="0,5,0,0"
             VerticalAlignment="Top"
             VerticalContentAlignment="Stretch"
             VerticalScrollBarVisibility="Hidden">
@@ -116,14 +147,14 @@
                     BorderBrush="Black"
                     BorderThickness="1"
                     CornerRadius="5">
-                    <Grid ColumnDefinitions="210,300,75,300" VerticalAlignment="Center">
+                    <Grid VerticalAlignment="Center" ColumnDefinitions="210,300,75,300">
                         <TextBlock
                             Grid.Column="0"
                             Height="40"
                             Margin="5,2,0,0"
                             IsEnabled="False"
-                            TextWrapping="Wrap"
-                            Text="Орган управления использованием атомной энергии"/>
+                            Text="Орган управления использованием атомной энергии"
+                            TextWrapping="Wrap"/>
                         <TextBox
                             Grid.Column="1"
                             Height="26"
@@ -167,7 +198,7 @@
                         <StackPanel
                             Grid.Row="1"
                             Grid.Column="0"
-                            Margin="0,24,0,0">
+                            Margin="0,5,0,0">
                             <TextBlock
                                 Height="32"
                                 Margin="5,0"
@@ -243,11 +274,6 @@
                             Grid.Column="1"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
-                            <TextBlock
-                                Margin="0,0,0,3"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Bottom"
-                                Text="Значения в базе"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
@@ -339,10 +365,6 @@
                             Grid.Row="1"
                             Grid.Column="2"
                             HorizontalAlignment="Center">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Text="Заменить"/>
                             <ListBox BorderThickness="0">
                                 <CheckBox
                                     Margin="0,3,0,6"
@@ -437,10 +459,6 @@
                             Grid.Column="3"
                             HorizontalAlignment="Stretch"
                             VerticalAlignment="Top">
-                            <TextBlock
-                                Margin="0,0,0,3"
-                                HorizontalAlignment="Center"
-                                Text="Значение импортируемой формы"/>
                             <TextBox
                                 Height="26"
                                 Margin="0,0,0,3"
