--- a/Client_App/Views/Messages/GetRegionAndFormNums.axaml
+++ b/Client_App/Views/Messages/GetRegionAndFormNums.axaml
@@ -5,9 +5,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:Client_App.ViewModels.Messages"
     Width="430"
-    Height="350"
+    Height="500"
     MinWidth="430"
-    MinHeight="350"
+    MinHeight="500"
     Title="Запрос региона и номеров форм"
     WindowStartupLocation="CenterScreen"
     x:Class="Client_App.Views.Messages.GetRegionAndFormNums"
@@ -40,12 +40,15 @@
                     Text="Укажите номер региона из двух цифр. Если поле будет не заполнено или заполнено некорректно, проверка наличия инвентаризации будет выполнена для всех организаций без ограничения по региону."
                     Width="400"
                     TextWrapping="Wrap"/>
-                <TextBox
+                <MaskedTextBox
                     Margin="5, 10"
                     Width="200"
+                    Mask="00"
+                    Name="RegionMaskedTextBox"
                     Text="{Binding Region}"/>
             </StackPanel>
         </Border>
+        <Grid Row="0" ColumnDefinitions="*,*"/>
         <Border
             Grid.Row="1"
             Margin="5"
@@ -59,11 +62,11 @@
                 <TextBlock
                     HorizontalAlignment="Left"
                     Margin="5, 5 , 5, 25"
-                    Text="Выберите номера форм, по которым необходимо выполнить проверку:"
+                    Text="Выберите номера форм, по которым необходимо выполнить проверку, а также графы, определяющие учётную единицу:"
                     Width="400"
                     TextWrapping="Wrap"/>
                 <Grid
-                    ColumnDefinitions="100,Auto"
+                    ColumnDefinitions="100,50,75,100,50"
                     RowDefinitions="30,30,30,30,30,30"
                     VerticalAlignment="Center">
                     <TextBlock
@@ -90,18 +93,18 @@
                     <CheckBox
                         Grid.Column="1"
                         Grid.Row="0"
-                        Name="All"
+                        Name="AllForms"
                         Margin="15, 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         IsThreeState="True"
-                        Checked ="AllCheckBox_Checked"
-                        Unchecked="AllCheckBox_Unchecked"
-                        IsChecked="{Binding CheckAll, Mode=TwoWay}"/>
+                        Checked ="AllFormsCheckBox_Checked"
+                        Unchecked="AllFormsCheckBox_Unchecked"
+                        IsChecked="{Binding CheckAllForms, Mode=TwoWay}"/>
                     <CheckBox
                         Grid.Column="1"
                         Grid.Row="1"
-                        Click="AnyCheckBox_Clicked"
+                        Click="AnyFormCheckBox_Clicked"
                         Name="Form11"
                         Margin="15, 0"
                         HorizontalAlignment="Left"
@@ -110,12 +113,110 @@
                     <CheckBox
                         Grid.Column="1"
                         Grid.Row="2"
-                        Click="AnyCheckBox_Clicked"
+                        Click="AnyFormCheckBox_Clicked"
                         Name="Form13"
                         Margin="15, 0"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         IsChecked="{Binding CheckForm13, Mode=TwoWay}"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="0"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Выбрать все:"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="1"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Номер паспорта:"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="2"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Тип:"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="3"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Радионуклиды:"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="4"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Заводской номер:"/>
+                    <TextBlock
+                        Grid.Column="3"
+                        Grid.Row="5"
+                        HorizontalAlignment="Right"
+                        Margin="5, 0"
+                        VerticalAlignment="Center"
+                        Text="Номер упаковки:"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="0"
+                        Name="AllSnkParams"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsThreeState="True"
+                        Checked ="AllSnkParamsCheckBox_Checked"
+                        Unchecked="AllSnkParamsCheckBox_Unchecked"
+                        IsChecked="{Binding CheckAllSnkParams, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="1"
+                        Click="AnySnkParamsCheckBox_Clicked"
+                        Name="PasNum"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckPasNum, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="2"
+                        Click="AnySnkParamsCheckBox_Clicked"
+                        Name="Type"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckType, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="3"
+                        Click="AnySnkParamsCheckBox_Clicked"
+                        Name="Radionuclids"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckRadionuclids, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="4"
+                        Click="AnySnkParamsCheckBox_Clicked"
+                        Name="FacNum"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckFacNum, Mode=TwoWay}"/>
+                    <CheckBox
+                        Grid.Column="4"
+                        Grid.Row="5"
+                        Click="AnySnkParamsCheckBox_Clicked"
+                        Name="PackNumber"
+                        Margin="15, 0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        IsChecked="{Binding CheckPackNumber, Mode=TwoWay}"/>
                 </Grid>
             </StackPanel>
         </Border>
